--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <li><a href="/">Home</a></li>
                     <li><a href="/contact.html">Contact</a></li>
                     <li><a href="/about.html">About</a></li>
-                    <li><a href="/qualities.html">Qualifications</a></li>
+                    <li><a href="#qualities.html">Qualifications</a></li>
                     <li><a href="/blog.html">Blog</a></li>
                     
                 </ul>
